[package]
name = "anchors_aweigh"
version = "0.1.2"
authors = ["Ben Falk <benjamin.falk@yahoo.com>"]
edition = "2024"
description = "versatile include tag preprocessor for mdbook"
keywords = ["book", "gitbook", "mdbook", "markdown", "plugin"]
categories = ["command-line-utilities", "template-engine"]
license = "MIT"
repository = "https://github.com/benfalk/anchors-aweigh"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
log = "0.4"
thiserror = "2.0"
tree-sitter = "0.25"
handlebars = "6.3"
tree-sitter-rust = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-javascript = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-json = "0.24"
tree-sitter-md = "0.3.2"
nom = "8.0"

[dev-dependencies]
serde_json = "1.0"
git2 = "0.20.0"

[build-dependencies]
cc = "1.2"
