[package]
name = "mdbook-anchors-aweigh"
version = "0.1.1"
edition = "2024"
description = "versatile include tag preprocessor for mdbook"
keywords = ["book", "gitbook", "mdbook", "markdown", "plugin"]
categories = ["command-line-utilities", "template-engine"]
repository = "https://github.com/benfalk/anchors-aweigh"
license = "MIT"

[[bin]]
name = "mdbook-anchors-aweigh"
path = "src/bin/mdbook-anchors-aweigh.rs"

[dependencies]
# stuck at this version of toml for the time
# being because mdbook is stuck at it as well
toml = "0.5.11"

mdbook = "0.4"
anchors_aweigh = { version = "0.1", path = "../anchors_aweigh/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
clap = { version = "4.5.30", features = ["derive"] }
